# metarag

./: .dockerignore  Makefile  README.md  app.Dockerfile  base.Dockerfile  config.yml  indexing.sbatch.sh  pdf-to-md.sbatch.sh  pyproject.toml
src/: config.py
src/application/: serve.py
src/indexing/: analyze_index.py  chunking.py  embedding_model.py  run_indexing.py  search_index.py
src/paper_crawling/: crawl_pdf_files.py  get_meta_of_missing_papers.py  sync_pdf_files.py
src/rag/: llm.py  pipeline.py  prompt.py  query.py
static/css/: metarag.css
static/html/: index.html
static/js/: metarag.js
templates/: index.html
