[project]
name = "rag-on-rag-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Marcel Gohsen",email = "marcel.gohsen@uni-weimar.de"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "retry (>=0.9.2,<0.10.0)"
]



[tool.poetry]
packages = [
    { include = "src/paper_crawling" }
]

[tool.poetry.group.dev.dependencies]
requests = "^2.32.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
