[project]
name = "rag-on-rag-demo"
version = "1.0.0"
description = ""
authors = [
    {name = "Marcel Gohsen",email = "marcel.gohsen@uni-weimar.de"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "retry (>=0.9.2,<0.10.0)",
    "requests (>=2.32.5)",
    "semchunk (>=3.2.3,<4.0.0)",
    "transformers (>=4.56.1,<5.0.0)",
    "torch (>=2.8.0,<3.0.0)",
    "sentence-transformers (>=5.1.0,<6.0.0)",
    "weaviate-client (>=4.16.9,<5.0.0)",
    "click (>=8.2.1,<9.0.0)",
    "xformers (>=0.0.32.post2,<0.0.33)",
    "elasticsearch (>=9.1.1,<10.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "openai (>=1.107.2,<2.0.0)",
    "bitsandbytes (>=0.47.0,<0.48.0)",
    "accelerate (>=1.10.1,<2.0.0)",
    "pybtex (>=0.25.1,<0.26.0)",
]



[tool.poetry]
packages = [
    { include = "*", from = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
